Updated to dpkg 1.4.1.9, and added spanish translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+dpkg (1.4.1.9) unstable; urgency=low
+
+  * Non-maintainer release.
+  * Updated dpkg-scansources to current version from Roderick Schertler
+  * Update location of GPL in internals-manual
+  * Update location of GPL and dpkg copyright in all manpages
+  * Include patch from Roman Hodek for dpkg-source to handle diffs of files
+    with lines that begin with two dashes.
+  * Move dpkg-scansources to dpkg-dev package
+  * Move dpkg-scansources manpage to section 8
+  * Fix error that moved a lot of manpages to the dpkg package.
+  * It looks like not reading the available-file for listfiles was not greeted
+    with much enthiousiasm, so reverse the change.
+
+ -- Wichert Akkerman <wakkerma@debian.org>  Wed, 15 Sep 1999 03:45:07 +0200
+
 dpkg (1.4.1.8) unstable; urgency=low
 
   * Non-maintainer release.
