--- a/po/es.po
+++ b/po/es.po
@@ -1,18 +1,13 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: dpkg\n"
 "POT-Creation-Date: 1999-09-15 03:36+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 1999-05-31 00:40-0300\n"
+"Last-Translator: Nicolás Lictmaier <nick@debian.org>\n"
+"Language-Team: es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING\n"
+"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: lib/compat.c:46
 msgid "unable to open tmpfile for vsnprintf"
@@ -897,6 +892,8 @@ msgid ""
 "package %.250s is not ready for configuration\n"
 " cannot configure (current status `%.250s')"
 msgstr ""
+"el paquete %.250s no esta listo para configurarse\n"
+" imposible configurar (estado actual `%.250s')"
 
 #: main/configure.c:99
 #, c-format
@@ -904,10 +901,12 @@ msgid ""
 "dpkg: dependency problems prevent configuration of %s:\n"
 "%s"
 msgstr ""
+"dpkg: problemas de dependencias impiden la configuración de %s:\n"
+"%s"
 
 #: main/configure.c:102
 msgid "dependency problems - leaving unconfigured"
-msgstr ""
+msgstr "problemas de dependencias - dejando sin configurar"
 
 #: main/configure.c:106
 #, c-format
@@ -915,17 +914,21 @@ msgid ""
 "dpkg: %s: dependency problems, but configuring anyway as you request:\n"
 "%s"
 msgstr ""
+"dpkg: %s: problemas de dependencias, pero configurando igual a pedido suyo:\n"
+"%s"
 
 #: main/configure.c:114
 msgid ""
 "Package is in a very bad inconsistent state - you should\n"
 " reinstall it before attempting configuration."
 msgstr ""
+"El paquete está en un estado grave de inconsistencia - Ud. debe\n"
+" reinstalarlo antes de intentar su configuración."
 
 #: main/configure.c:117
 #, c-format
 msgid "Setting up %s (%s) ...\n"
-msgstr ""
+msgstr "Configurando %s (%s) ...\n"
 
 #: main/configure.c:165
 #, c-format
@@ -953,11 +956,13 @@ msgid ""
 "\n"
 "Configuration file `%s'"
 msgstr ""
+"\n"
+"Archivo de configuración `%s'"
 
 #: main/configure.c:214
 #, c-format
 msgid " (actually `%s')"
-msgstr ""
+msgstr " (`%s' realmente)"
 
 #: main/configure.c:219
 msgid ""
@@ -965,26 +970,34 @@ msgid ""
 " ==> File on system created by you or by a script.\n"
 " ==> File also in package provided by package maintainer.\n"
 msgstr ""
+"\n"
+" ==> Archivo en el sistema creado por Ud. o por algún script.\n"
+" ==> Archivo también en el paquete.\n"
 
 #: main/configure.c:226
 msgid ""
 "\n"
 " ==> Modified (by you or by a script) since installation.\n"
 msgstr ""
+"\n"
+" ==> Modificado (por Ud. o por script) desde la instalación.\n"
 
 #: main/configure.c:227
 msgid ""
 "\n"
 "     Not modified since installation.\n"
 msgstr ""
+"\n"
+"     No modificado desde la instalación.\n"
 
 #: main/configure.c:230
 msgid " ==> Package distributor has shipped an updated version.\n"
 msgstr ""
+" ==> El distribuidor del paquete a publicado una versión actualizada.\n"
 
 #: main/configure.c:231
 msgid "     Version in package is the same as at last installation.\n"
-msgstr ""
+msgstr "     La versión en el paquete es la misma de la última instalación.\n"
 
 #: main/configure.c:236
 msgid ""
@@ -993,14 +1006,18 @@ msgid ""
 "    N or O  : keep your currently-installed version\n"
 "      Z     : background this process to examine the situation\n"
 msgstr ""
+"   ¿Qué quisiera hacer al respecto?  Sus opciones son:\n"
+"    Y o I  : instalar la versión del paquete\n"
+"    N o O  : conservar la versión actualmente instalada\n"
+"      Z    : ir a un shell para examinar la situación\n"
 
 #: main/configure.c:242
 msgid " The default action is to keep your current version.\n"
-msgstr ""
+msgstr " La acción por omisión es conservar su versión actual.\n"
 
 #: main/configure.c:244
 msgid " The default action is to install the new version.\n"
-msgstr ""
+msgstr " La acción por omisión es instalar la nueva versión.\n"
 
 #: main/configure.c:250
 msgid "[default=N]"
@@ -1040,7 +1057,7 @@ msgstr ""
 
 #: main/configure.c:288
 msgid "Type `exit' when you're done.\n"
-msgstr ""
+msgstr "Tipee `exit' cuando termine.\n"
 
 #: main/configure.c:293
 #, c-format
@@ -1053,7 +1070,7 @@ msgstr ""
 
 #: main/configure.c:298
 msgid "Don't forget to foreground (`fg') this process when you're done !\n"
-msgstr ""
+msgstr "¡No se olvide de continuar este proceso con `fg' cuando termine!\n"
 
 #: main/configure.c:319
 #, c-format
@@ -1088,7 +1105,7 @@ msgstr ""
 #: main/configure.c:356
 #, c-format
 msgid "Installing new version of config file %s ...\n"
-msgstr ""
+msgstr "Instalando nueva versión de archivo de configuración %s ...\n"
 
 #: main/configure.c:360
 #, c-format
@@ -1167,29 +1184,29 @@ msgstr ""
 
 #: main/depcon.c:136 main/packages.c:386
 msgid " depends on "
-msgstr ""
+msgstr " depende de "
 
 #: main/depcon.c:137
 msgid " pre-depends on "
-msgstr ""
+msgstr " pre-depende de "
 
 #: main/depcon.c:138
 msgid " recommends "
-msgstr ""
+msgstr " recomienda "
 
 #: main/depcon.c:139
 msgid " conflicts with "
-msgstr ""
+msgstr " hace conflicto con "
 
 #: main/depcon.c:213
 #, c-format
 msgid "  %.250s is to be removed.\n"
-msgstr ""
+msgstr "  %.250s está por ser removido.\n"
 
 #: main/depcon.c:216
 #, c-format
 msgid "  %.250s is to be deconfigured.\n"
-msgstr ""
+msgstr "  %.250s está por ser desconfigurado.\n"
 
 #: main/depcon.c:220
 #, c-format
@@ -1219,17 +1236,17 @@ msgstr ""
 #: main/depcon.c:262
 #, c-format
 msgid "  %.250s is %s.\n"
-msgstr ""
+msgstr "  %.250s es %s.\n"
 
 #: main/depcon.c:298
 #, c-format
 msgid "  %.250s provides %.250s but is to be removed.\n"
-msgstr ""
+msgstr "  %.250s provee %.250s pero está por ser removido.\n"
 
 #: main/depcon.c:302
 #, c-format
 msgid "  %.250s provides %.250s but is to be deconfigured.\n"
-msgstr ""
+msgstr "  %.250s provee %.250s pero está por ser desconfigurado.\n"
 
 #: main/depcon.c:307
 #, c-format
@@ -1239,7 +1256,7 @@ msgstr ""
 #: main/depcon.c:352
 #, c-format
 msgid "  %.250s (version %.250s) is to be installed.\n"
-msgstr ""
+msgstr "  %.250s (versión %.250s) está por ser instalado.\n"
 
 #: main/depcon.c:366
 #, c-format
@@ -1267,6 +1284,13 @@ msgid ""
 "+++-===============-==============-=========================================="
 "==\n"
 msgstr ""
+"Desired=Unknown/Install/Remove/Purge\n"
+"| Estado=No/Instalado/Config-files/Unpacked/Failed-config/Half-installed\n"
+"|/ Err?=(none)/Hold/Reinst-required/X=both-problems (Status,Err: "
+"mayúsc.=malo)\n"
+"||/ Nombre          Versión        Descripción\n"
+"+++-===============-==============-=========================================="
+"==\n"
 
 #: main/enquiry.c:121 main/select.c:80
 #, c-format
@@ -1279,6 +1303,9 @@ msgid ""
 "installation.  They must be reinstalled for them (and any packages\n"
 "that depend on them) to function properly:\n"
 msgstr ""
+"Los siguientes paquetes están en un estado de desorden debido a serios\n"
+"problemas durante su instalación.  Deben ser reinstalados para que ellos\n"
+"(y los paquetes que dependen de ellos) funcionen correctamente:\n"
 
 #: main/enquiry.c:151
 msgid ""
@@ -1286,6 +1313,9 @@ msgid ""
 "They must be configured using dpkg --configure or the configure\n"
 "menu option in dselect for them to work:\n"
 msgstr ""
+"Los siguientes paquetes han sido desempaquetados pero no configurados aún.\n"
+"Deben ser configurados mediante dpkg --configure o la opción `configure'\n"
+"en dselect para que funcionen:\n"
 
 #: main/enquiry.c:156
 msgid ""
@@ -1293,6 +1323,9 @@ msgid ""
 "configuring them the first time.  The configuration should be retried using\n"
 "dpkg --configure <package> or the configure menu option in "
 msgstr ""
+"Los siguientes paquetes están sólo configurados a medias, probablemente\n"
+"debido a problemas en su configuración inicial.  Debe reintentarse su\n"
+"configuración con dpkg --configure <paquete> o la opción `configure' en "
 
 #: main/enquiry.c:161
 msgid ""
@@ -1300,6 +1333,10 @@ msgid ""
 "installation.  The installation can probably be completed by retrying it;\n"
 "the packages can be removed using dselect or dpkg --remove:\n"
 msgstr ""
+"Los siguientes paquetes están sólo instalados a medias, debido a problemas\n"
+"durante su instalación.  La instalación puede completarse probablemente\n"
+"reintentando; los paquetes pueden ser removidos con dselect o dpkg "
+"--remove:\n"
 
 #: main/enquiry.c:186
 msgid "--audit does not take any arguments"
@@ -1312,7 +1349,7 @@ msgstr ""
 #: main/enquiry.c:290
 #, c-format
 msgid " %d packages, from the following sections:"
-msgstr ""
+msgstr " %d paquetes, de las siguientes secciones:"
 
 #: main/enquiry.c:310
 #, c-format
@@ -1321,15 +1358,15 @@ msgstr ""
 
 #: main/enquiry.c:311
 msgid "local diversion"
-msgstr ""
+msgstr "desviación local"
 
 #: main/enquiry.c:312
 msgid "to"
-msgstr ""
+msgstr "a"
 
 #: main/enquiry.c:312
 msgid "from"
-msgstr ""
+msgstr "desde"
 
 #: main/enquiry.c:345
 msgid "--search needs at least one file name pattern argument"
@@ -1348,17 +1385,17 @@ msgstr ""
 #: main/enquiry.c:406
 #, c-format
 msgid "Package `%s' is not installed and no info is available.\n"
-msgstr ""
+msgstr "El paquete `%s' no está instalado y no hay info disponible.\n"
 
 #: main/enquiry.c:415
 #, c-format
 msgid "Package `%s' is not available.\n"
-msgstr ""
+msgstr "El paquete `%s' no está disponible.\n"
 
 #: main/enquiry.c:425
 #, c-format
 msgid "Package `%s' is not installed.\n"
-msgstr ""
+msgstr "El paquete `%s' no está instalado.\n"
 
 #: main/enquiry.c:434
 #, c-format
@@ -1479,15 +1516,15 @@ msgstr ""
 
 #: main/errors.c:70
 msgid "dpkg: too many errors, stopping\n"
-msgstr ""
+msgstr "dpkg: demasiados errores, parando\n"
 
 #: main/errors.c:76
 msgid "Errors were encountered while processing:\n"
-msgstr ""
+msgstr "Se encontraron errores al procesar:\n"
 
 #: main/errors.c:83
 msgid "Processing was halted because there were too many errors.\n"
-msgstr ""
+msgstr "Proceso detenido por haber demasiados errores.\n"
 
 #: main/errors.c:91
 #, c-format
@@ -1544,7 +1581,7 @@ msgstr ""
 
 #: main/filesdb.c:208
 msgid "(Reading database ... "
-msgstr ""
+msgstr "(Leyendo base de datos ... "
 
 #: main/filesdb.c:208
 msgid "(Scanning database ... "
@@ -1553,7 +1590,7 @@ msgstr ""
 #: main/filesdb.c:216
 #, c-format
 msgid "%d files and directories currently installed.)\n"
-msgstr ""
+msgstr "%d archivos y directorios instalados actualmente.)\n"
 
 #: main/filesdb.c:247
 #, c-format
@@ -1644,27 +1681,27 @@ msgstr ""
 
 #: main/help.c:40
 msgid "not installed"
-msgstr ""
+msgstr "no instalado"
 
 #: main/help.c:40
 msgid "unpacked but not configured"
-msgstr ""
+msgstr "desempaquetado pero sin configurar"
 
 #: main/help.c:41
 msgid "broken due to postinst failure"
-msgstr ""
+msgstr "roto debido a falla en postinst"
 
 #: main/help.c:42
 msgid "installed"
-msgstr ""
+msgstr "instalado"
 
 #: main/help.c:43
 msgid "broken due to failed removal"
-msgstr ""
+msgstr "roto debido a remoción fallida"
 
 #: main/help.c:44
 msgid "not installed but configs remain"
-msgstr ""
+msgstr "no instalado pero queda su configuración"
 
 #: main/help.c:81
 msgid "dpkg - warning: PATH is not set.\n"
@@ -1673,7 +1710,7 @@ msgstr ""
 #: main/help.c:96
 #, c-format
 msgid "dpkg: `%s' not found on PATH.\n"
-msgstr ""
+msgstr "dpkg: `%s' no encontrado en PATH.\n"
 
 #: main/help.c:102
 #, c-format
@@ -1681,6 +1718,8 @@ msgid ""
 "%d expected program(s) not found on PATH.\n"
 "NB: root's PATH should usually contain /usr/local/sbin, /usr/sbin and /sbin."
 msgstr ""
+"%d programa(s) esperado(s) no encontrados en PATH.\n"
+" El path de root debe contener usualmente /usr/local/sbin, /usr/sbin y /sbin."
 
 #: main/help.c:219
 #, c-format
@@ -1725,7 +1764,7 @@ msgstr ""
 #: main/help.c:364
 #, c-format
 msgid "dpkg: warning - %s returned error exit status %d\n"
-msgstr ""
+msgstr "dpkg: aviso - %s devolvión código de error %d\n"
 
 #: main/help.c:367
 #, c-format
@@ -1744,7 +1783,7 @@ msgstr ""
 #: main/help.c:381
 #, c-format
 msgid "new %s script"
-msgstr ""
+msgstr "script %s nuevo"
 
 #: main/help.c:385
 msgid "there is no script in the new version of the package - giving up"
@@ -1757,7 +1796,7 @@ msgstr ""
 
 #: main/help.c:401
 msgid "dpkg: ... it looks like that went OK.\n"
-msgstr ""
+msgstr "dpkg: ... parece que todo anduvo bien.\n"
 
 #. Huh ?
 #: main/help.c:496
@@ -1771,7 +1810,7 @@ msgstr ""
 
 #: main/main.c:44
 msgid "Debian Linux `dpkg' package management program version "
-msgstr ""
+msgstr "Debian GNU/Linux administrador de paquetes `dpkg' versión "
 
 #: main/main.c:47
 msgid ""
@@ -1864,7 +1903,7 @@ msgstr ""
 #: dpkg-deb/main.c:130 main/main.c:173 split/main.c:142
 #, c-format
 msgid "conflicting actions --%s and --%s"
-msgstr ""
+msgstr "acciones en conflicto --%s y --%s"
 
 #: main/main.c:225
 #, c-format
@@ -1916,7 +1955,7 @@ msgstr ""
 
 #: dpkg-deb/main.c:150 main/main.c:402 split/main.c:163
 msgid "need an action option"
-msgstr ""
+msgstr "se necesita opción de acción"
 
 #: main/packages.c:79
 #, c-format
@@ -1940,46 +1979,48 @@ msgid ""
 "More than one copy of package %s has been unpacked\n"
 " in this run !  Only configuring it once.\n"
 msgstr ""
+"Más de una copia del paquete %s se desempaquetó\n"
+" en esta corrida!  Sólo configurando una vez.\n"
 
 #: main/packages.c:264 main/packages.c:308 main/packages.c:321
 msgid "  Package "
-msgstr ""
+msgstr "  Paquete "
 
 #: main/packages.c:267 main/packages.c:311 main/packages.c:324
 msgid " which provides "
-msgstr ""
+msgstr " que provee "
 
 #: main/packages.c:270
 msgid " is to be removed.\n"
-msgstr ""
+msgstr " está por ser removido.\n"
 
 #: main/packages.c:282
 msgid "  Version of "
-msgstr ""
+msgstr "  Versión de "
 
 #: main/packages.c:284
 msgid " on system is "
-msgstr ""
+msgstr "  en el sistema es "
 
 #: main/packages.c:304
 #, c-format
 msgid "dpkg: also configuring `%s' (required by `%s')\n"
-msgstr ""
+msgstr "dpkg: también configurando `%s' (requerido por `%s')\n"
 
 #: main/packages.c:314
 msgid " is not configured yet.\n"
-msgstr ""
+msgstr " no está configurado todavía.\n"
 
 #: main/packages.c:327
 msgid " is not installed.\n"
-msgstr ""
+msgstr " no está instalado.\n"
 
 #. Don't print the line about the package to be removed if
 #. * that's the only line.
 #.
 #: main/packages.c:392
 msgid "; however:\n"
-msgstr ""
+msgstr "; sin embargo:\n"
 
 #: main/processarc.c:105
 msgid "cannot access archive"
@@ -2035,12 +2076,12 @@ msgstr ""
 #: main/processarc.c:252
 #, c-format
 msgid "Preparing to replace %s %s (using %s) ...\n"
-msgstr ""
+msgstr "Preparando para reemplazar %s %s (usando %s) ...\n"
 
 #: main/processarc.c:257
 #, c-format
 msgid "Unpacking %s (from %s) ...\n"
-msgstr ""
+msgstr "Desempaquetando %s (de %s) ...\n"
 
 #: main/processarc.c:277
 #, c-format
@@ -2071,7 +2112,7 @@ msgstr ""
 #: main/processarc.c:424
 #, c-format
 msgid "Unpacking replacement %.250s ...\n"
-msgstr ""
+msgstr "Desempaquetando reemplazo %.250s ...\n"
 
 #: main/processarc.c:500
 msgid "unable to exec dpkg-deb to get filesystem archive"
@@ -2171,7 +2212,7 @@ msgstr ""
 
 #: main/remove.c:95
 msgid "This is an essential package - it should not be removed."
-msgstr ""
+msgstr "Es un paquete esencial - no debe ser removido."
 
 #: main/remove.c:121
 #, c-format
@@ -2179,10 +2220,12 @@ msgid ""
 "dpkg: dependency problems prevent removal of %s:\n"
 "%s"
 msgstr ""
+"dpkg: problemas de dependencias impiden la remoción de %s:\n"
+"%s"
 
 #: main/remove.c:123
 msgid "dependency problems - not removing"
-msgstr ""
+msgstr "problemas de dependencias - no removiendo"
 
 #: main/remove.c:127
 #, c-format
@@ -2205,7 +2248,7 @@ msgstr ""
 #: main/remove.c:150
 #, c-format
 msgid "Removing %s ...\n"
-msgstr ""
+msgstr "Removiendo %s ...\n"
 
 #: main/remove.c:246
 #, c-format
@@ -2244,7 +2287,7 @@ msgstr ""
 #: main/remove.c:338
 #, c-format
 msgid "Purging configuration files for %s ...\n"
-msgstr ""
+msgstr "Purgando archivos de configuración de %s ...\n"
 
 #: main/remove.c:382
 #, c-format
@@ -2343,7 +2386,7 @@ msgstr ""
 #: main/update.c:93
 #, c-format
 msgid "Information about %d package(s) was updated.\n"
-msgstr ""
+msgstr "La información sobre %d paquete(s) fue actualizada.\n"
 
 #: main/update.c:101
 msgid "--forget-old-unavail takes no arguments"
@@ -3221,3 +3264,12 @@ msgstr ""
 #, c-format
 msgid "%s: no files checked\n"
 msgstr ""
+
+#~ msgid "Selecting previously deselected package %s.\n"
+#~ msgstr "Seleccionando paquete %s previamente no-seleccionado.\n"
+
+#~ msgid "Skipping deselected package %s.\n"
+#~ msgstr "Omitiendo paquete no seleccionado %s.\n"
+
+#~ msgid "Version %.250s of %.250s already installed, skipping.\n"
+#~ msgstr "Versión %.250s de %.250s ya instalada, omitiendo.\n"
