--- a/scripts/dpkg-source.1
+++ b/scripts/dpkg-source.1
@@ -731,7 +731,7 @@ and initial arguments for
 The utilities and this manpage were written by Ian Jackson.  They are
 Copyright (C)1995-1996 by him and released under the GNU General
 Public Licence; there is NO WARRANTY.  See
-.B /usr/doc/copyright/dpkg
+.B /usr/share/doc/dpkg/copyright
 and
-.B /usr/doc/copyright/GPL
+.B /usr/share/common-licenses/GPL
 for details.
