--- a/split/dpkg-split.8
+++ b/split/dpkg-split.8
@@ -254,7 +254,7 @@ and this manpage were written by Ian Jackson.  They are
 Copyright (C) 1995-1996
 by him and released under the GNU General Public Licence; there is NO
 WARRANTY.  See
-.B /usr/doc/copyright/dpkg
+.B /usr/share/dpkg/copyright
 and
-.B /usr/doc/copyright/GPL
+.B /usr/share/common-licenses/GPL
 for details.
