--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+dpkg (1.4.1.11) unstable; urgency=low
+
+  * Non-maintainer release.
+  * Added sparc64 to archtable
+  * Added entries for newer alpha architectures to the archtable
+  * Always run patch and diff with LANG set to C.
+  * Handle diff warning for files with no newline at the end of file
+    Closes: Bug#45642
+
+ -- Wichert Akkerman <wakkerma@debian.org>  Fri, 24 Sep 1999 03:23:54 +0200
+
 dpkg (1.4.1.10) unstable; urgency=low
 
   * Non-maintainer release.
