Fix bug in dpkg-buildpackage that broke signing with -sgpg

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Tue Sep 28 01:14:14 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Fix typo in dpkg-buildpackage that broke signing if only -sgpg was given
+
+Mon Sep 27 04:25:32 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Change changelog-style for ChangeLog, the package-style doesn't work
+    well for CVS IMHO.
+  * Merged patch from Adam Heath <doogie@debian.org> to make update-alternatives.pl
+    work across filesystems
+
 dpkg (1.4.1.12) unstable; urgency=low
 
   * Non-maintainer release.
