Make dpkg-source work on empty diffs

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Sep 28 13:38:50 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Make dpkg-source work again on empty diffs, patch from Roman Hodek
+    <Roman.Hodek@informatik.uni-erlangen.de>
+
 Tue Sep 28 01:14:14 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Fix typo in dpkg-buildpackage that broke signing if only -sgpg was given
