--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+dpkg (1.4.1.13) unstable; urgency=low
+
+  * Non-maintainer release.
+  * NMU number 13, lets see what breaks :)
+  * update-alternatives works across filesystems now
+  * Make -sgpg work in dpkg-buildpackage (typo)
+
+ -- Wichert Akkerman <wakkerma@debian.org>  Tue, 28 Sep 1999 01:26:19 +0200
+
 dpkg (1.4.1.12) unstable; urgency=low
 
   * Non-maintainer release.
