Fix GPL and documentation location in debian/changelog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Oct  4 15:38:42 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Update GPL and documentation location in debian/copyright
+
 Tue Sep 28 13:38:50 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Make dpkg-source work again on empty diffs, patch from Roman Hodek
