--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,16 @@
+Tue Oct  5 04:08:41 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Change datadir to just $(prefix) in po/Makefile.in.in, otherwise
+    localedir would become /usr/share/share/locale
+  * Make /usr/share/doc/dpkg-dev a symlink to /usr/share/doc/dpkg
+
 Mon Oct  4 15:38:42 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Update GPL and documentation location in debian/copyright
+
+Sat Oct  2 16:00:38 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Update deb.5 to say it's in section 5, not 8
 
 Tue Sep 28 13:38:50 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
