--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+dpkg (1.4.1.14) unstable; urgency=low
+
+  * Non-maintainer release.
+  * dpkg-source works again on empty diffs, Closes: Bug# 46159
+  * Install locale-files in /usr/share, Closes: Bug# 46631
+  * Make /usr/share/doc/dpkg-dev a symlink to /usr/share/doc/dpkg
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.4.1.13) unstable; urgency=low
 
   * Non-maintainer release.
