--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
+Tue Oct  5 19:16:38 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Set docdir to $(datadir)/doc
+  * Install /etc/emacs/site-start.d/50dpkg-dev.el with mode 644
+
 Tue Oct  5 04:08:41 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
-  * Change datadir to just $(prefix) in po/Makefile.in.in, otherwise
-    localedir would become /usr/share/share/locale
   * Make /usr/share/doc/dpkg-dev a symlink to /usr/share/doc/dpkg
 
 Mon Oct  4 15:38:42 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
