--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ dpkg (1.4.1.14) unstable; urgency=low
   * dpkg-source works again on empty diffs, Closes: Bug# 46159
   * Install locale-files in /usr/share, Closes: Bug# 46631
   * Make /usr/share/doc/dpkg-dev a symlink to /usr/share/doc/dpkg
+  * Actually include fix to make update-alternatives works filesystems (oops!)
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Wichert Akkerman <wakkerma@debian.org>  Tue,  5 Oct 1999 19:19:05 +0200
 
 dpkg (1.4.1.13) unstable; urgency=low
 
