Updates for Hurd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Oct  6 14:40:33 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Lock complete lockfile for database: it's empty anyway, and Hurd
+    doesn't support partial locks currently
+  * Don't use PATH_MAX but allocate necessay memory in checkpath().
+    Useful for system that don't have PATH_MAX (like Hurd)
+
 Tue Oct  5 19:16:38 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Set docdir to $(datadir)/doc
