--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Oct  7 01:16:23 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Check if codenumber is between 0 and 99 instead of just checking
+    for a number
+
 Wed Oct  6 14:40:33 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Lock complete lockfile for database: it's empty anyway, and Hurd
