--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ dpkg (1.4.1.14) unstable; urgency=low
   * Install locale-files in /usr/share, Closes: Bug# 46631
   * Make /usr/share/doc/dpkg-dev a symlink to /usr/share/doc/dpkg
   * Actually include fix to make update-alternatives works filesystems (oops!)
+  * Check if codenumber is between 0 and 99, Closes: Bug# 46810
 
  -- Wichert Akkerman <wakkerma@debian.org>  Tue,  5 Oct 1999 19:19:05 +0200
 
