Fix dpkg-deb to be able to handle archives made with Linux ar

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Oct 11 02:13:15 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Merge patch from Ben Collins <bcollins@debian.org> to make dpkg-deb
+    handle packages created with Linux ar.
+
 Thu Oct  7 01:16:23 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Check if codenumber is between 0 and 99 instead of just checking
