--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Oct 11 15:47:18 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Merge patch from Ben Collins <bcollins@debian.org>:
+    modify remove_buld to remove conffiles when purging a package before we
+    remove its directories.
+
 Mon Oct 11 02:13:15 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Merge patch from Ben Collins <bcollins@debian.org> to make dpkg-deb
