* check if we violate conflicts/depends/pre-depends of other packages when   processing an archive. * Preparation to move start-stop-daemon from scripts to utils

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
 Mon Oct 11 15:47:18 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
-  * Merge patch from Ben Collins <bcollins@debian.org>:
-    modify remove_buld to remove conffiles when purging a package before we
-    remove its directories.
+  * Preparation to move start-stop-daemon from scripts to utils
+  * Merge patches from Ben Collins <bcollins@debian.org>:
+    + modify remove_buld to remove conffiles when purging a package before we
+      remove its directories.
+    + check if we violate conflicts/depends/pre-depends of other packages when
+      processing an archive.
 
 Mon Oct 11 02:13:15 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
