Add support for HURD to start-stop-daemon Move start-stop-daemon to a new utils/ subdirectory

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Oct 11 17:37:47 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Added support for HURD to start-stop-daemon
+  * Create new directory utils/ for extra C-programs, and move
+    start-stop-daemon there.
+
 Mon Oct 11 15:47:18 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Preparation to move start-stop-daemon from scripts to utils
