dselect is its own package now

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Oct 11 18:18:25 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Move dselect into its own package
+
 Mon Oct 11 17:37:47 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Added support for HURD to start-stop-daemon
@@ -20,8 +24,8 @@ Mon Oct 11 02:13:15 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
 Thu Oct  7 01:16:23 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
-  * Check if codenumber is between 0 and 99 instead of just checking
-    for a number
+  * Check if sequencecode is between 0 and 99 instead of just checking
+    for a number in update-rc.d
 
 Wed Oct  6 14:40:33 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
