--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,20 @@
+dpkg (1.4.1.15) unstable; urgency=low
+
+  * non-maintainer release.
+  * Move dselect into its own package
+  * Changes to support HURD
+  * Remove conffiles before directories when purging
+  * Check if integrity from other packages will broken when processing
+    an archive
+  * dpkg-deb can handle package made with Linux ar.
+  * Add check to update-alternatives to see if the sequencecode is between
+    0 and 99
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.4.1.14) unstable; urgency=low
 
-  * Non-maintainer release.
+  * non-maintainer release.
   * dpkg-source works again on empty diffs, Closes: Bug# 46159
   * Install locale-files in /usr/share, Closes: Bug# 46631
   * Make /usr/share/doc/dpkg-dev a symlink to /usr/share/doc/dpkg
