Change oldfile-check in process_archive to prevent memory corruption

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Oct 13 20:41:16 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Update oldfile-check in process_archive so we don't experience
+    memory corruption
+
 Wed Oct 13 17:51:17 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Merge patches from Ben Collins <bcollins@debian.org>:
