--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Thu Oct 14 03:37:52 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Add mips to archtable
+  * Use Errno module to get ENOENT instead of hardcoding it
+
+Thu Oct 14 02:47:40 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Fix C error we introduced in checkpath() earlier
+
 Wed Oct 13 20:41:16 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Update oldfile-check in process_archive so we don't experience
