Add --force options for handling changed conffiles

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,8 +16,10 @@ dpkg (1.4.1.15) unstable; urgency=low
   * dpkg-scanpackages: don't abort but only skip a package if we can't
     open it
   * Add HURD-support to  start-stop-daemon
+  * Reinstate patch to not read available when doing --list-files
+  * Add a couple of --force options to handle changed conffiles
 
- -- Wichert Akkerman <wakkerma@debian.org>  Wed, 13 Oct 1999 21:52:17 +0200
+ -- Wichert Akkerman <wakkerma@debian.org>  Thu, 14 Oct 1999 04:20:56 +0200
 
 dpkg (1.4.1.14) unstable; urgency=low
 
