Update dpkg manpage for --force-conf* options

--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -364,6 +364,19 @@ Don't care about versions when checking dependencies.
 Install, even if it conflicts with another package. This is dangerous,
 for it will usually cause overwriting of some files.
 
+\fBconfnew\fP:
+If a conffile has been modified always install the new version without
+prompting.
+
+\fBconfold\fP:
+If a conffile has been modified always keep the old version without prompting.
+
+\fBconfdef\fP:
+If a conffile has been modified always choose the default action. If
+\fB--force-confnew\fP or \fB--force-confold\fP have also been given
+always default. If there is no default then we use the old or new
+version, depending on the option given.
+
 \fBoverwrite\fP(*):
 Overwrite one package's file with another's file.
 
