Added latest changes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Sat Oct 16 11:43:45 EDT 1999 Ben Collins <bcollins.debian.org>
+
+  * Added --chuid option to start-stop-daemon to allow switching to
+    a different uid when starting a process
+  * Added mipsel to the archtable for completeness
+  * Added --config option to update-alternatives to allow easy changing
+    of the registered alternatives for a specific name
+  * Updated the deb-control(5) man page with all the current fields
+    and uses
+
 Thu Oct 14 04:51:14 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Don't use Errno module but the POSIX module, since that *is*
