* Made the large info screen show 5 lines of the pkglist so that     it scrolled properly, and still showed the cursor

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ dpkg (1.4.1.16) unstable; urgency=low
     of the registered alternatives for a specific name
   * Updated the deb-control(5) man page with all the current fields
     and uses
+  * Made the large info screen show 5 lines of the pkglist so that
+    it scrolled properly, and still showed the cursor
 
  -- Wichert Akkerman <wakkerma@debian.org>  Sat, 16 Oct 1999 12:20:10 -0400
 
