--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@ Sat Oct 16 11:43:45 EDT 1999 Ben Collins <bcollins.debian.org>
     of the registered alternatives for a specific name
   * Updated the deb-control(5) man page with all the current fields
     and uses
+  * Made the large info screen show 5 lines of the pkglist so that
+    it scrolled properly, and still showed the cursor
 
 Thu Oct 14 04:51:14 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
