--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.4.1.16) unstable; urgency=low
+dpkg (1.4.1.17) unstable; urgency=low
 
   * Added --chuid option to start-stop-daemon to allow switching to
     a different uid when starting a process
@@ -10,7 +10,14 @@ dpkg (1.4.1.16) unstable; urgency=low
   * Made the large info screen show 5 lines of the pkglist so that
     it scrolled properly, and still showed the cursor
 
- -- Wichert Akkerman <wakkerma@debian.org>  Sat, 16 Oct 1999 12:20:10 -0400
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
+dpkg (1.4.1.16) unstable; urgency=medium
+
+  * Hardcode ENOENT again since the errno-part of the POSIX module
+    isn't in perl-*-base. sigh.
+
+ -- Wichert Akkerman <wakkerma@debian.org>  Fri, 15 Oct 1999 04:01:14 +0200
 
 dpkg (1.4.1.15) unstable; urgency=low
 
