--- a/doc/deb-control.5
+++ b/doc/deb-control.5
@@ -23,21 +23,23 @@ processing the body of the field (except in the case of the
 field, see below).
 .SH REQUIRED FIELDS
 .TP
-.BR Package: \ <Short\ name\ of\ package>
+.BR Package: \ <package\ name>
 The value of this field is used to generate file names by some
 installation tools.
 .TP
-.BR Version: \ <Original\ Version\ and\ Debian\ Package\ Revision>
+.BR Version: \ <version\ string>
 Typically, this is the original portable package's version
 number in whatever form the program's author uses. It may also include
 a Debian revision number (for non-native packages). If both version and
 revision are supplied, they are seperated by a '-'. For this reason,
 the original version cannot have a '-' in its version number.
 .TP
-.BR Maintainer: \ <Name\ and\ e-mail\ address\ of\ package\ maintainer>
-should be in the format  Joe Bloggs <jbloggs@foo.com>.
+.BR Maintainer: \ <fullname\ email>
+Should be in the format `Joe Bloggs <jbloggs@foo.com>', and is typically
+the person who created the package as opposed to the author of the
+software that was packages.
 .TP
-.BR Description: \ <Description\ of\ package>
+.BR Description: \ <package\ description>
 The format for the package description is a short brief summary on the
 first line (after the "Description" field). The following lines can be
 used as a longer, more detailed description. Each line of the long description
@@ -45,7 +47,43 @@ must be preceded by a space, and blank lines in the long desription must
 contain a single '.' following the preceding space.
 .SH OPTIONAL FIELDS
 .TP
-.BR Depends: \ <Short\ names\ of\ requisite\ packages>
+.BR Section: \ <section>
+This is a general field that gives the package a category based on the software
+that it installs. Some common sections are `mail', `text' and `new'.
+.TP
+.BR Priority: \ <priority>
+Sets the importance of this package in relation to the system as a whole. Common
+priorities are `base', `standard' and `optional'.
+.LP
+In Debian, the
+.B Section
+and
+.B Priority
+fields have a defined set of accepted values based on policy. They are used to
+decide how the packages are layed out in the archive. A list of these can be
+obtained from the latest
+.B debian-policy
+package.
+.TP
+.BR Essential: \ <yes|no>
+This field is usually only needed when the answer is `yes'. It denotes a
+package that is required for proper operation of the system. Dpkg will not
+allow this an
+.B Essential
+package to be removed without using one of the force options.
+.TP
+.BR Architecture: \ <arch|all>
+The architecture specifies which type of hardware this package was compiled
+for. Common architectures are `i386', `sparc' and `alpha'. Note that the
+.B all
+option is meant for packages that are architecture independent. Some examples
+of this are perl scripts and documentation.
+.TP
+.BR Source: \ <source\ name>
+The name of the source that this package came from, if different than the
+name of the package itself.
+.TP
+.BR Depends: \ <package\ list>
 List of packages that are required for this package to provide a
 non-trivial amount of functionality.  The package maintenance software
 will not allow a package to be installed without also installing
@@ -55,14 +93,14 @@ field, and will run the postinst scripts of packages listed in DEPENDS
 fields before those of the packages which depend on them, and run
 prerm scripts before.
 .TP
-.BR Pre-Depends: \ <Short\ names\ of\ prerequisite\ packages>
+.BR Pre-Depends: \ <package\ list>
 List of packages that must be installed
 .B and
 configured before this one can be installed. This is usually used in the
 case where this package requires the pre depend for running its preinst
 script.
 .TP
-.BR Recommends: \ <Short\ names\ of\ related,\ recommended\ packages>
+.BR Recommends: \ <package\ list>
 Lists packages that would be found together with
 this one in all but unusual installations.  The package maintenance
 software will warn the user if they install a package without those
@@ -70,8 +108,8 @@ listed in its
 .B Recommends
 field.
 .TP
-.BR Suggests: \ <Short\ names\ of\ related,\ optional\ packages>
-lists packages that are related to this one and can perhaps enhance
+.BR Suggests: \ <package\ list>
+Lists packages that are related to this one and can perhaps enhance
 its usefulness, but without which installing this package is perfectly
 reasonable.  The package maintenance software will not moan at the
 user for not selecting suggested packages, but may use the information
@@ -98,7 +136,7 @@ Accepted version relationships are ">>" for greater than, "<<" for less than,
 ">=" for greater than or equal to, "<=" for less than or equal to, and "="
 for equal to.
 .TP
-.BR Conflicts: \ <Short\ names\ of\ packages\ which\ conflict\ with\ this\ one>
+.BR Conflicts: \ <package\ list>
 Lists packages that conflict with this one, for example by containing
 files with the same names (an example would be Smail vs. Sendmail).
 The package maintenance software will not allow conflicting packages
@@ -106,14 +144,14 @@ to be installed at the same time. Two conflicting packages should each include a
 .B Conflicts
 line mentioning the other.
 .TP
-.BR Replaces: \ <Short\ names\ of\ packages\ which\ this\ one\ replaces>
+.BR Replaces: \ <package\ list>
 List of packages that this one replaces. This is used for allowing this package
 to overwrite the files of another package and is usually used with the
 .B Conflicts
 field to force removal of the other package, if this one also has the same files
 as the conflicted package.
 .TP
-.BR Provides: \ <Short\ names\ of\ packages\ this\ one\ provides>
+.BR Provides: \ <package\ list>
 This is a list of virtual packages that this one provides. Usuaully this is used
 in the case of several packages all providing the same service. For example,
 sendmail and smail both can serve as a mail server, so they provide a common package
@@ -136,6 +174,24 @@ with the same syntax as above for the
 and
 .B Replaces
 fields.
+.SH EXAMPLE
+.PP
+.RS
+.nf
+Package: grep
+Essential: yes
+Priority: required
+Section: base
+Maintainer: Wichert Akkerman <wakkerma@debian.org>
+Architecture: sparc
+Version: 2.3-7
+Pre-Depends: libc6 (>= 2.0.105)
+Description: GNU grep, egrep and fgrep.
+ The GNU set of grep tools. Many times faster than standard
+ unix grep.
+.fi
+.RE
+.PP
 .SH SEE ALSO
 .BR deb (5),
 .BR dpkg (8),
