Fixed references to the --nocheck option in dpkg-deb(1) and dpkg-deb --help reporting --no-check

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,10 @@ dpkg (1.4.1.17) unstable; urgency=low
     and uses
   * Made the large info screen show 5 lines of the pkglist so that
     it scrolled properly, and still showed the cursor
+  * Removed references to dpkg(5) which seems to not exist anymore
+  * Fixed `dpkg-deb --help' and dpkg-deb(1) from reporting --no-check
+    when it's actually --nocheck (went with the hardcoded option, so
+    this is just a documentation fix).
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
