--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sun Oct 17 13:40:46 EDT 1999 Ben Collins <bcollins.debian.org>
+
+  * Removed references to dpkg(5) which seems to not exist anymore
+  * Fixed `dpkg-deb --help' and dpkg-deb(1) from reporting --no-check
+    when it's actually --nocheck (went with the hardcoded option, so
+    this is just a documentation fix).
+
 Sun Oct 17 11:51:36 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Revert to hardcoding ENOENT again, since the necessary parts of
